# rusty-utils

./: .coverage  Makefile  README.md  coverage.xml  license  pyproject.toml  readme.md
.github/workflows/: python-publish.yml
docs/: README.md  common.md  option.md  result.md
rusty_utils/: __init__.py  common.py  option.py  result.py
src/: common.py  option.py  result.py
tests/: test_option.py  test_result.py
