[tool.poetry]
name = "rusty-utils"
version = "0.1.0"
description = "Bring some useful tools from Rust to Python"
authors = ["iceice666 <iceice666@outlook.com>"]
license = "mit"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
