[tool.poetry]
name = "rusty-utils"
version = "0.1.1"
description = "Bring some useful tools from Rust to Python"
authors = ["iceice666 <iceice666@outlook.com>"]
license = "mit"
readme = "README.md"
repository = "https://github.com/iceice666/rusty-utils"
homepage = "https://github.com/iceice666/rusty-utils"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.3.2"
pytest-mypy = "^0.10.3"
lazydocs = "^0.4.8"
pydocstyle = "^6.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
files = [
    "src",
    "tests",
]

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
addopts = [
    "--tb=short",
    "--cov=result",
    "--cov=tests",
    "--cov-report=term",
    "--cov-report=xml",
]
testpaths = [
    "tests",
]